@@ -2,7 +2,7 @@
  * Process Hacker -
  *   logging system
  *
- * Copyright (C) 2010 wj32
+ * Copyright (C) 2010-2016 wj32
  *
  * This file is part of Process Hacker.
  *
